--- a/templates/inicio_usuario.html
+++ b/templates/inicio_usuario.html
@@ -29,9 +29,9 @@
         <div class="navbar-right">
             <a href="/inicio_usuario">Home</a>
             <a href="#about">Sobre Nosotros</a>
-            <a href="#menu">Menu</a>
+            <a href="/food-menu">Menu</a>
             <a href="#order">Ubicación</a>
-            <a href="">Productos</a>
+            <a href="/game-menu">Productos</a>
             <a href="">Reservas</a>
             <a href="">Pedidos</a>
             <a href="/perfil_user"><i class="fas fa-user"></i></a>
