--- a/templates/reserva-active.html
+++ b/templates/reserva-active.html
@@ -49,3 +49,9 @@
             </div>
         </div>
 </body>
+<script>
+    document.getElementById('mobile-menu').addEventListener('click', function() {
+        document.querySelector('.navbar-right').classList.toggle('active');
+    });
+</script>
+</html>
