--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Monster Dojo - Recuperar Contraseña</title>
-    <link rel="stylesheet" href="..\static\css\userforms.css">
+    <link rel="stylesheet" href="../static/css/userforms.css">
     <script src="https://kit.fontawesome.com/9c32bf538b.js" crossorigin="anonymous"></script>
 </head>
 
@@ -13,12 +13,15 @@
         <div class="nav-logo">
             <img src="../static/images/logo.png" alt="Monster Dojo">
         </div>
+        <div class="nav-hamburger">
+            <i class="fa fa-bars"></i>
+        </div>
         <ul class="nav-items">
-            <li><a href="">Inicio</a></li>
-            <li><a href="">Juegos</a></li>
-            <li><a href="">Comida</a></li>
-            <li><a href="">Reservas</a></li>
-            <li><a href="">Iniciar Sesion</a></li>
+            <li><a href="inicio.html">Inicio</a></li>
+            <li><a href="game-menu.html">Juegos</a></li>
+            <li><a href="food-menu.html">Comida</a></li>
+            <li><a href="form-reserva.html">Reservas</a></li>
+            <li><a href="login.html">Iniciar Sesion</a></li>
         </ul>
     </nav>
     <div class="container">
@@ -36,6 +39,12 @@
             </form>
         </div>
     </div>
+    <!-- Script Responsive Navbar -->
+    <script>
+        document.querySelector('.nav-hamburger').addEventListener('click', function() {
+            document.querySelector('.nav-items').classList.toggle('nav-items-active');
+        });
+    </script>
 </body>
 
 </html>
