--- a/static/css/food-panel.css
+++ b/static/css/food-panel.css
@@ -1,3 +1,4 @@
+/* Estilos generales */
 * {
     margin: 0;
     padding: 0;
@@ -22,7 +23,6 @@ body {
 
 .navbar {
     width: 100%;
-    height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -31,9 +31,6 @@ body {
 }
 
 .nav-logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100px;
     width: 100px;
     margin-right: 20px;
@@ -45,6 +42,13 @@ body {
 .nav-logo img {
     height: 100%;
     width: 100%;
+}
+
+.nav-hamburger {
+    display: none;
+    font-size: 30px;
+    color: var(--light-color);
+    cursor: pointer;
 }
 
 .nav-items {
@@ -76,10 +80,6 @@ body {
 
 .container {
     width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     padding: 30px;
     background-color: var(--secondary-color);
 }
@@ -101,26 +101,25 @@ body {
 
 .search-container input {
     width: 100%;
-    height: 100%;
     padding: 10px;
     border: none;
     border-radius: 20px;
     margin-right: 10px;
+    font-size: 16px;
 }
 
 .search-container button {
-    width: 15%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    font-size: 15px;
+    padding: 10px 20px;
     background-color: var(--alt-primary-color);
     color: var(--light-color);
     border: none;
-    padding: 10px;
-    border-radius: 30px;
+    border-radius: 20px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 16px;
+    width: auto;
 }
 
 .add-product {
@@ -141,11 +140,15 @@ body {
     cursor: pointer;
 }
 
+.table-responsive {
+    width: 100%;
+    overflow-x: auto;
+}
+
 table {
     width: 100%;
-    height: 100%;
-    padding: 20px;
-    border-collapse: collapse; /* Añadido para evitar espacios entre celdas */
+    border-collapse: collapse;
+    background-color: var(--light-color);
 }
 
 th {
@@ -153,9 +156,6 @@ th {
     color: var(--light-color);
     padding: 10px;
     text-align: center;
-    position: relative;
-    display: table-cell; /* Cambiado de flex a table-cell */
-    vertical-align: middle; /* Alineación vertical central */
 }
 
 th .filter-btn {
@@ -163,22 +163,22 @@ th .filter-btn {
     border: none;
     margin-left: 5px;
     color: var(--light-color);
-    font-size: 14px; /* Ajuste del tamaño del icono */
-    vertical-align: middle; /* Alineación vertical central */
-    width: 20px; /* Tamaño fijo */
-    height: 20px; /* Tamaño fijo */
-    display: inline-block; /* Asegurar que sea de tipo inline-block */
+    font-size: 14px;
+    vertical-align: middle;
+    width: 20px;
+    height: 20px;
+    display: inline-block;
     padding: 0;
-    line-height: 20px; /* Asegurar la alineación vertical */
-    text-align: center; /* Asegurar la alineación horizontal */
+    line-height: 20px;
+    text-align: center;
 }
 
 td {
-    background-color: var(--light-color);
+    background-color: var (--light-color);
     color: var(--dark-color);
     padding: 15px;
     text-align: center;
-    border: 1px solid var(--secondary-color); /* Añadido para separar celdas */
+    border: 1px solid var(--secondary-color);
 }
 
 td button {
@@ -190,71 +190,282 @@ td button {
     cursor: pointer;
 }
 
-/* RESPONSIVE DE TABLA */
-/* Agrega estos estilos */
-.table-responsive {
-    width: 100%;
-    overflow-x: auto;
+/* Estilos del pop-up */
+body {
+    font-family: 'Baloo Bhai 2', cursive;
 }
 
-table {
-    width: 100%;
-    border-collapse: collapse;
-}
-
-th, td {
-    padding: 15px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-}
-
-th {
-    background-color: var(--primary-color);
-    color: white;
-    position: sticky;
+.popup {
+    display: none;
+    position: fixed;
     top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
 }
 
-.filter-btn {
-    background: transparent;
-    border: none;
-    margin-left: 5px;
-    color: var (--light-color);
-    font-size: 14px;
-    cursor: pointer;
-}
-
-td {
-    background-color: var(--light-color);
-    color: var(--dark-color);
-    padding: 15px;
-    text-align: center;
-    border: 1px solid var(--secondary-color);
-    white-space: nowrap; /* Evita que el contenido se ajuste en múltiples líneas */
-}
-
-td img {
-    display: block;
-    margin: 0 auto;
-    max-width: 100px; /* Asegura que las imágenes no sean demasiado grandes */
-}
-
-/* Mantén tus otros estilos existentes */
-.action-buttons {
-    display: flex;
-    gap: 10px; /* Espacio entre los botones */
-    justify-content: center; /* Centrar los botones horizontalmente */
-}
-
-.action-buttons button {
-    background-color: var(--alt-primary-color);
-    color: var(--light-color);
-    border: none;
-    padding: 10px;
+.popup-content {
+    position: relative;
+    margin: 5% auto;
+    padding: 20px;
+    width: 400px;
+    background-color: #1c1c1c;
     border-radius: 10px;
+    text-align: left;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 24px;
+    cursor: pointer;
+    color: #faf7e6;
+}
+
+.product-icon {
+    width: 100px;
+    height: 100px;
+    display: block;
+    margin: 0 auto 20px;
+}
+
+h2 {
+    font-size: 30px;
+    margin-bottom: 20px;
+    color: #d48600;
+    font-family: 'Bangers', system-ui;
+    text-align: center;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+label {
+    margin-bottom: 5px;
+    color: #faf7e6;
+    display: block;
+    font-size: 16px;
+}
+
+input[type="text"], input[type="email"], input[type="number"], input[type="file"], select {
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 14px;
+    color: black;
+    background-color: #faf7e6;
+    width: 100%;
+}
+
+.buttons {
+    display: flex;
+    justify-content: space-between;
+}
+
+button {
+    padding: 10px;
+    width: 48%;
+    background-color: #192847;
+    border-color: #faf7e6;
+    border-radius: 30px;
+    color: #d48600;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+button:hover {
+    background-color: #d48600;
+    color: black;
+}
+
+button[type="button"] {
+    background-color: #192847;
+}
+
+button[type="button"]:hover {
+    background-color: #d48600;
+    color: black;
+}
+
+.step-indicator {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0;
+    position: relative;
+}
+
+.step-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.step-line {
+    flex: 1;
+    height: 2px;
+    background-color: #ccc;
+    margin: 0 10px;
+}
+
+.step-line.active {
+    background-color: #d48600;
+}
+
+.step {
+    width: 30px;
+    height: 30px;
+    border: 2px solid #ccc;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #ccc;
+    cursor: pointer;
+    background-color: #1c1c1c;
+    z-index: 1;
+    position: relative;
+}
+
+.step.active {
+    border-color: #d48600;
+    color: #d48600;
+}
+
+.tab {
+    display: none;
+}
+
+/* Estilos responsivos */
+.nav-hamburger {
+    display: none;
+    font-size: 30px;
+    color: var(--light-color);
     cursor: pointer;
 }
 
-.action-buttons button i {
-    pointer-events: none; /* Asegura que los íconos no bloqueen la funcionalidad del botón */
+.nav-items {
+    display: flex;
+}
+
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+        padding: 10px;
+    }
+
+    .nav-logo {
+        height: 80px;
+        width: 80px;
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+
+    .nav-hamburger {
+        display: block;
+    }
+
+    .nav-items {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .nav-items.nav-items-active {
+        display: flex;
+    }
+
+    .nav-items li {
+        margin: 10px 0;
+    }
+
+    .nav-items li a {
+        font-size: 18px;
+    }
+
+    .container {
+        padding: 15px;
+    }
+
+    .header-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .header-container div {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    .search-container {
+        flex-direction: column;
+        align-items: stretch;
+    }
+
+    .search-container input {
+        margin-bottom: 10px;
+    }
+
+    .search-container button {
+        width: 100%;
+    }
+
+    .table-responsive {
+        overflow-x: auto;
+    }
+
+    table {
+        width: 100%;
+    }
+
+    th, td {
+        white-space: nowrap;
+    }
+
+    .table-summary {
+        width: 100%;
+        text-align: center;
+        margin-left: 0;
+        margin-top: 20px;
+    }
+}
+
+@media (max-width: 480px) {
+    .navbar {
+        padding: 5px;
+    }
+
+    .nav-logo {
+        height: 60px;
+        width: 60px;
+    }
+
+    .nav-items li a {
+        font-size: 16px;
+    }
+
+    .header-container div p {
+        font-size: 14px;
+    }
+
+    th, td {
+        padding: 10px;
+    }
+
+    .table-summary p {
+        font-size: 16px;
+    }
 }
