--- a/templates/form-reserva.html
+++ b/templates/form-reserva.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Reserva</title>
+    <title>Formulario de Reserva</title>
     <link rel="stylesheet" href="../static/css/form-reserva.css">
     <script src="https://kit.fontawesome.com/9c32bf538b.js" crossorigin="anonymous"></script>
 </head>
@@ -21,7 +21,7 @@
             <a href="#about">Sobre nosotros</a>
             <a href="#menu">Menú</a>
             <a href="#order">Ubicación</a>
-            <a href="/login">Iniciar Sesión</a>
+            <a href="/perfil_user"><i class="fas fa-user"></i></a>
         </div>
     </div>
     <div class="container">
@@ -46,6 +46,13 @@
             </form>
         </div>
     </div>
+
+    <script>
+        // Script para manejar el menú móvil
+        document.getElementById('mobile-menu').addEventListener('click', function () {
+            document.querySelector('.navbar-right').classList.toggle('active');
+        });
+    </script>
 </body>
 
 </html>
