--- a/templates/new_password.html
+++ b/templates/new_password.html
@@ -13,6 +13,9 @@
         <div class="nav-logo">
             <img src="../static/images/logo.png" alt="Monster Dojo">
         </div>
+        <div class="nav-hamburger">
+            <i class="fa fa-bars"></i>
+        </div>
         <ul class="nav-items">
             <li><a href="">Inicio</a></li>
             <li><a href="">Juegos</a></li>
@@ -76,5 +79,11 @@
         }
     });
 });
+</script>
+ <!-- Script Responsive Navbar -->
+ <script>
+    document.querySelector('.nav-hamburger').addEventListener('click', function() {
+        document.querySelector('.nav-items').classList.toggle('nav-items-active');
+    });
 </script>
 </html>
