--- a/templates/register.html
+++ b/templates/register.html
@@ -13,12 +13,15 @@
         <div class="nav-logo">
             <img src="../static/images/logo.png" alt="Monster Dojo">
         </div>
+        <div class="nav-hamburger">
+            <i class="fa fa-bars"></i>
+        </div>
         <ul class="nav-items">
-            <li><a href="">Inicio</a></li>
-            <li><a href="">Juegos</a></li>
-            <li><a href="">Comida</a></li>
+            <li><a href="inicio.html">Inicio</a></li>
+            <li><a href="game-menu.html">Juegos</a></li>
+            <li><a href="food-menu.html">Comida</a></li>
             <li><a href="">Reservas</a></li>
-            <li><a href="">Iniciar Sesion</a></li>
+            <li><a href="login.html">Iniciar Sesion</a></li>
         </ul>
     </nav>
     <div class="container">
@@ -125,6 +128,12 @@
                 });
             });
         </script>
+        <!-- Script Responsive Navbar -->
+    <script>
+        document.querySelector('.nav-hamburger').addEventListener('click', function() {
+            document.querySelector('.nav-items').classList.toggle('nav-items-active');
+        });
+    </script>
 
 
 </body>
