--- a/templates/userspanel.html
+++ b/templates/userspanel.html
@@ -27,6 +27,9 @@
             font-weight: bold;
             margin-bottom: 20px;
         }
+        .table-responsive {
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
@@ -34,17 +37,21 @@
         <div class="nav-logo">
             <img src="../static/images/logo.png" alt="Monster Dojo">
         </div>
+        <div class="nav-hamburger">
+            <i class="fa fa-bars"></i>
+        </div>
         <ul class="nav-items">
-            <li><a href="/adminpanel">Inicio</a></li>
-            <li><a href="/usuarios">Usuarios</a></li>
-            <li><a href="/juegos">Juegos</a></li>
-            <li><a href="/comida">Comida</a></li>
-            <li><a href="/mesas">Mesas</a></li>
-            <li><a href="/reservas">Reservas</a></li>
-            <li><a href="/pedidos">Pedidos</a></li>
-            <li><a href="/logout">Cerrar Sesion</a></li>
+            <li><a href="adminpanel.html">Inicio</a></li>
+            <li><a href="userspanel.html">Usuarios</a></li>
+            <li><a href="games-panel.html">Juegos</a></li>
+            <li><a href="food-panel.html">Comida</a></li>
+            <li><a href="registrar-mesas.html">Mesas</a></li>
+            <li><a href="reservas-panel.html">Reservas</a></li>
+            <li><a href="pedidos-panel.html">Pedidos</a></li>
+            <li><a href="perfil_admin.html"><i class="fa-solid fa-user-gear"></i></a></li>
         </ul>
     </nav>
+
     <div class="container">
         <div class="title">Panel de Usuarios</div>
         <div class="actions-container">
@@ -55,29 +62,31 @@
                 </div>
             </form>
         </div>
-        <table>
-            <thead>
-                <tr>
-                    <th>Nombre <a href="{{ url_for('list_users', search=request.args.get('search', ''), sort_by='nombre', sort_order='desc' if request.args.get('sort_order', 'asc') == 'asc' and request.args.get('sort_by', 'nombre') == 'nombre' else 'asc') }}"><button class="filter-btn"><i class="fa-solid fa-sort"></i></button></a></th>
-                    <th>Correo Electrónico <a href="{{ url_for('list_users', search=request.args.get('search', ''), sort_by='correo', sort_order='desc' if request.args.get('sort_order', 'asc') == 'asc' and request.args.get('sort_by', 'correo') == 'correo' else 'asc') }}"><button class="filter-btn"><i class="fa-solid fa-sort"></i></button></a></th>
-                    <th>Teléfono <a href="{{ url_for('list_users', search=request.args.get('search', ''), sort_by='telefono', sort_order='desc' if request.args.get('sort_order', 'asc') == 'asc' and request.args.get('sort_by', 'telefono') == 'telefono' else 'asc') }}"><button class="filter-btn"><i class="fa-solid fa-sort"></i></button></a></th>
-                    <th>Acciones</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for user in users %}
-                <tr>
-                    <td>{{ user.nombre }}</td>
-                    <td>{{ user.correo }}</td>
-                    <td>{{ user.telefono }}</td>
-                    <td>
-                        <button class="editUserBtn" data-user-id="{{ user.id_usuario }}"><i class="fa-solid fa-edit"></i></button>
-                        <button class="deleteUserBtn" onclick="confirmDelete(event)"><i class="fa-solid fa-trash"></i></button>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        <div class="table-responsive">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Nombre <a href="{{ url_for('list_users', search=request.args.get('search', ''), sort_by='nombre', sort_order='desc' if request.args.get('sort_order', 'asc') == 'asc' and request.args.get('sort_by', 'nombre') == 'nombre' else 'asc') }}"><button class="filter-btn"><i class="fa-solid fa-sort"></i></button></a></th>
+                        <th>Correo Electrónico <a href="{{ url_for('list_users', search=request.args.get('search', ''), sort_by='correo', sort_order='desc' if request.args.get('sort_order', 'asc') == 'asc' and request.args.get('sort_by', 'correo') == 'correo' else 'asc') }}"><button class="filter-btn"><i class="fa-solid fa-sort"></i></button></a></th>
+                        <th>Teléfono <a href="{{ url_for('list_users', search=request.args.get('search', ''), sort_by='telefono', sort_order='desc' if request.args.get('sort_order', 'asc') == 'asc' and request.args.get('sort_by', 'telefono') == 'telefono' else 'asc') }}"><button class="filter-btn"><i class="fa-solid fa-sort"></i></button></a></th>
+                        <th>Acciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for user in users %}
+                    <tr>
+                        <td>{{ user.nombre }}</td>
+                        <td>{{ user.correo }}</td>
+                        <td>{{ user.telefono }}</td>
+                        <td>
+                            <button class="editUserBtn" data-user-id="{{ user.id_usuario }}"><i class="fa-solid fa-edit"></i></button>
+                            <button class="deleteUserBtn" onclick="confirmDelete(event)"><i class="fa-solid fa-trash"></i></button>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </div>
 
     <!-- EDITAR USUARIO POP-UP -->
@@ -95,7 +104,7 @@
                     <span class="step" onclick="showEditTab(2)" id="editStep3">3</span>
                 </div>
             </div>
-            <form id="editForm" method="POST"onsubmit="handleSubmit(event)">
+            <form id="editForm" method="POST" onsubmit="handleSubmit(event)">
                 <div class="tab">
                     <div class="form-group">
                         <label for="editName">Nombre</label>
@@ -221,7 +230,6 @@
             });
         }
 
-
         function showSuccessMessage(event, popupId, formId, message) {
             event.preventDefault();
             Swal.fire({
@@ -260,6 +268,12 @@
                 }
             });
         }
+    </script>
+    <!-- Script Responsive Navbar -->
+    <script>
+        document.querySelector('.nav-hamburger').addEventListener('click', function() {
+            document.querySelector('.nav-items').classList.toggle('nav-items-active');
+        });
     </script>
 </body>
 </html>
