--- a/templates/verDetalle-pedido.html
+++ b/templates/verDetalle-pedido.html
@@ -66,6 +66,9 @@
         <div class="nav-logo">
             <img src="../static/images/logo.png" alt="Monster Dojo">
         </div>
+        <div class="nav-hamburger">
+            <i class="fa fa-bars"></i>
+        </div>
         <ul class="nav-items">
             <li><a href="adminpanel.html">Inicio</a></li>
             <li><a href="userspanel.html">Usuarios</a></li>
@@ -112,5 +115,12 @@
             <p><strong>Total:</strong> {{ pedido.total }} Bs.</p>
         </div>
     </div>
+
+    <!-- Script Responsive Navbar -->
+    <script>
+        document.querySelector('.nav-hamburger').addEventListener('click', function() {
+            document.querySelector('.nav-items').classList.toggle('nav-items-active');
+        });
+    </script>
 </body>
 </html>
