--- a/templates/verDetalle-reserva.html
+++ b/templates/verDetalle-reserva.html
@@ -66,6 +66,9 @@
         <div class="nav-logo">
             <img src="../static/images/logo.png" alt="Monster Dojo">
         </div>
+        <div class="nav-hamburger">
+            <i class="fa fa-bars"></i>
+        </div>
         <ul class="nav-items">
             <li><a href="adminpanel.html">Inicio</a></li>
             <li><a href="userspanel.html">Usuarios</a></li>
@@ -113,5 +116,13 @@
             <p><strong>Total:</strong> {{ reserva.total }} Bs.</p>
         </div>
     </div>
+     <!-- Script Responsive Navbar -->
+     <script>
+        document.querySelector('.nav-hamburger').addEventListener('click', function() {
+            document.querySelector('.nav-items').classList.toggle('nav-items-active');
+        });
+    </script>
+    
+    
 </body>
 </html>
