CRUD de reservas vista usuario y vista admin

--- a/templates/food-menu.html
+++ b/templates/food-menu.html
@@ -41,7 +41,7 @@
                                         <p>Precio: ${{ producto.precio }}</p>
                                         <p>Máximo de personas: {{ producto.max_personas }}</p>
                                     </div>
-                                    <button class="order-btn">Añadir al carrito</button>
+                                    <!-- <button class="order-btn">Añadir al carrito</button> -->
                                 </div>
                             {% endfor %}
                         </div>
