--- a/templates/inicio_usuario.html
+++ b/templates/inicio_usuario.html
@@ -32,7 +32,7 @@
             <a href="/food-menu">Menu</a>
             <a href="#order">Ubicación</a>
             <a href="/game-menu">Productos</a>
-            <a href="">Reservas</a>
+            <a href="/user_reservations">Reservas</a>
             <a href="">Pedidos</a>
             <a href="/perfil_user"><i class="fas fa-user"></i></a>
         </div>
